--- a/byui/styles/styles.css
+++ b/byui/styles/styles.css
@@ -1,9 +1,3 @@
-
-
-body {
-    text-align: center;
-  }
-
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -28,3 +22,34 @@ footer {
     background-color: steelblue;
     color: white;
   }  
+img {
+    width: 80%;
+  }
+p {
+    width: 80%;
+  }
+a {
+    font-size: 1.5em;
+  }  
+
+h1 {
+    text-align: center;
+} 
+nav {
+  text-align: center;
+}
+img {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+}
+main p {
+  width: 80%;
+  margin: 50px auto;
+}
+
+footer {
+  background-color: steelblue;
+  color: white;
+  text-align: center;
+}
