--- a/byui/styles/styles.css
+++ b/byui/styles/styles.css
@@ -18,9 +18,10 @@ img {
 p {
     padding: 10px;
   }
-footer {
+nav, footer {
     background-color: steelblue;
     color: white;
+    text-align: center;
   }  
 img {
     width: 80%;
@@ -35,9 +36,7 @@ a {
 h1 {
     text-align: center;
 } 
-nav {
-  text-align: center;
-}
+
 img {
   display: block;
   width: 80%;
@@ -47,9 +46,11 @@ main p {
   width: 80%;
   margin: 50px auto;
 }
-
-footer {
-  background-color: steelblue;
-  color: white;
-  text-align: center;
+footer p {
+  font-size: 20px;
+  margin: 20px auto;
 }
+a:hover {
+  background-color: white;
+  color: steelblue;
+}  
