--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,7 +6,7 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #463730   ;
+  --primary-color: #F3E5AB   ;
   --secondary-color: #1f5673 ;
   --accent1-color: #759fbc;
   --accent2-color: #90c3c8;
@@ -20,7 +20,7 @@ Fonts are separated by a | */
   --headline-color-on-color: white; /* headlines on a colored background */ 
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
+  --paragraph-background-color: #90c3c8  ;
   --nav-link-color: white;
   --nav-background-color: #1f5673;
   --nav-hover-link-color: white;
