--- a/byui/styles/styles.css
+++ b/byui/styles/styles.css
@@ -1,46 +1,35 @@
 nav {
     background-color: steelblue;
-    padding: 10px;
-  }  
-
-a {
-    color: white;
-    margin: 40px;
-  } 
-  
-h1 {
-    color: steelblue;
-  }
-img {
-    width: 800px;
-    border: 4px solid steelblue;
-  }
-p {
-    padding: 10px;
-  }
+    padding: 25px;
+}  
 nav, footer {
     background-color: steelblue;
     color: white;
     text-align: center;
-  }  
-img {
-    width: 80%;
-  }
+}  
 p {
     width: 80%;
-  }
+    padding: 10px;
+}
 a {
     font-size: 1.5em;
-  }  
+    color: white;
+    margin: 40px;
+    padding: 25px;
+}  
 
 h1 {
     text-align: center;
+    margin: 50px 0;
+    color: steelblue;
 } 
 
 img {
   display: block;
   width: 80%;
   margin: 0 auto;
+  width: 800px;
+  border: 4px solid steelblue;
 }
 main p {
   width: 80%;
@@ -49,8 +38,16 @@ main p {
 footer p {
   font-size: 20px;
   margin: 20px auto;
+  padding: 25px;
 }
 a:hover {
   background-color: white;
   color: steelblue;
 }  
+footer {
+  background-color: steelblue;
+  color: white;
+}
+body {
+  margin: 0
+}
