--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -22,7 +22,7 @@ main section{
 
 #background{
     height: 725px;
-    background-color: #F3E5AB;
+    background-color: #1f5673;
 }
 
 body{
@@ -89,7 +89,9 @@ footer a:hover{
 .logo{
     width: 80px;
 }
-
+.icon{
+    width: 80px;
+}
 #hero-img{
     width: 100%;
 }
