--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,7 +2,8 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Permanent+Marker&family=Radio+Canada:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans+Narrow:wght@700&family=PT+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=Dosis:wght@300&family=Inconsolata:wght@300&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -12,8 +13,8 @@ Fonts are separated by a | */
   --accent2-color: #90c3c8;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Permanent Marker", "Radio Canada";
-  --paragraph-font: Caveat, Helvetica, sans-serif;
+  --heading-font: 'Bebas Neue', 'PT Sans', sans-serif;
+  --paragraph-font: 'BIZ UDPGothic', sans-serif, 'Dosis';
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: black;  /* headlines on a white background */ 
