--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans+Narrow:wght@700&family=PT+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=Dosis:wght@300&family=Inconsolata:wght@300&display=swap');;
+
 #content {
     max-width: 1600px; 
     margin: 0 auto;
@@ -6,18 +9,34 @@ nav a{
     text-align: center;
     color: #d9c2a3;
     text-decoration: none;
+    font-family:'Bebas Neue', 'PT Sans', sans-serif;
+    padding: 35px;
 }
 
-#hero-msg h1, #hero-msg h4{
+#logo_link{
+    padding-top: 5px;
+}
+
+#hero-msg h1{
     text-align: center;
+    font-family:'Bebas Neue', 'PT Sans', sans-serif;
+}
+#hero-msg h4{
+    text-align: center;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
 }
 
 .button-box{
     text-align: center;
+    font-family: 'Bebas Neue', 'PT Sans', sans-serif;
 }
 
 main section{
     text-align: center;
+    font-family: 'Bebas Neue', 'PT Sans', sans-serif;
+}
+main section img{
+    box-sizing: border-box;
 }
 
 #background{
@@ -27,8 +46,14 @@ main section{
 
 body{
     background-color: #F3E5AB; 
+    font-size: 22px;
+    padding: 0;
+    margin: 0;
 }
 
+h2{
+    margin: 0;
+}
 header{
     background-color: #1f5673; 
 }
@@ -42,6 +67,11 @@ nav a:hover{
     background-color: #759fbc; 
     color: black;
     text-decoration: none;
+    font-family:'Bebas Neue', 'PT Sans', sans-serif;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover{
@@ -51,39 +81,55 @@ nav a:hover{
 
 .msg{
     background-color: #90c3c8; 
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 footer{
     background-color: #759fbc;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
-.home-tittle{
-    color: #d9c2a3;
+.home-title{
+    color: black;
+    font-family: 'Bebas Neue', 'PT Sans', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4{
     color: black;
+    font-family: 'Bebas Neue', 'PT Sans', sans-serif;
 }
 
 .msg h2{
     color: #1f5673;
+    font-family: 'Bebas Neue', 'PT Sans', sans-serif;
+    
 }
 
 .msg p{
     color: #1f5673;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 footer h3{
     color: #1f5673;
+    font-family: 'Bebas Neue', 'PT Sans', sans-serif;
 }
 
 footer a{
     color: white;
     text-decoration: none;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
 }
 
 footer a:hover{
     color: #1f5673;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
 }
 
 .logo{
@@ -91,6 +137,7 @@ footer a:hover{
 }
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img{
     width: 100%;
@@ -98,4 +145,20 @@ footer a:hover{
 
 footer h3 a:hover{
     text-decoration: underline;
+}
+
+footer .social img{
+    padding-top: 15px;
+}
+
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+
+.card-img{
+    border: 10px solid #1f5673;
+}
+
+.mountains{
+    margin: 40px;
 }
