--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans+Narrow:wght@700&family=PT+Sans:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=Dosis:wght@300&family=Inconsolata:wght@300&display=swap');;
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=Dosis:wght@300&family=Inconsolata:wght@300&display=swap');
 
 #content {
     max-width: 1600px; 
