--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -2,7 +2,7 @@
 /* Activity 1 styles */
 .content1 {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 300px 300px;
     justify-items: center;
     grid-gap: 20px;
     
