--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -74,7 +74,7 @@
 /* Activity 3 styles */ 
 .content3 {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 300px 300px;
     
     
 }
