--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -15,6 +15,8 @@ nav a{
 
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 #hero-msg h1{
@@ -24,6 +26,7 @@ nav a{
 #hero-msg h4{
     text-align: center;
     font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    color: white;
 }
 
 .button-box{
@@ -42,6 +45,8 @@ main section img{
 #background{
     height: 725px;
     background-color: #1f5673;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body{
@@ -56,6 +61,8 @@ h2{
 }
 header{
     background-color: #1f5673; 
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 nav a:hover{
@@ -83,12 +90,18 @@ nav a:hover{
     background-color: #90c3c8; 
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 footer{
     background-color: #759fbc;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .home-title{
@@ -157,8 +170,101 @@ footer .social img{
 
 .card-img{
     border: 10px solid #1f5673;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 .mountains{
     margin: 40px;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+ 
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}            
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+} 
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
