--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -105,7 +105,7 @@ footer{
 }
 
 .home-title{
-    color: black;
+    color: white;
     font-family: 'Bebas Neue', 'PT Sans', sans-serif;
     font-size: 2em;
     margin-top: 10px;
