--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -2,7 +2,7 @@
 /* Activity 1 styles */
 .content1 {
     display: grid;
-    grid-template-columns: 300px 300px;
+    grid-template-columns: 1fr 1fr;
     justify-items: center;
     grid-gap: 20px;
     
@@ -40,7 +40,7 @@
 /* Activity 2 styles */ 
 .content2 {
   display: grid;
-  grid-template-columns:  50px 50px 50px 50px 50px 50px 50px; 
+  grid-template-columns:  50px 50px 50px 50px 50px; 
   grid-gap: 0px;
 }
 .red2 {
@@ -75,6 +75,8 @@
 .content3 {
     display: grid;
     grid-template-columns: 300px 300px;
+    grid-column-gap: 40px;
+    grid-column: 20px;
     
     
 }
@@ -85,17 +87,17 @@
   grid-column: 1/3;
 } 
 .green3 {
-  width: 90%; 
+  width: 100%; 
   height: 200px; 
   background-color: green;
   justify-items: left;
 } 
 .yellow3 {
-  width: 90%; 
+  width: 100%; 
   height: 200px; 
   background-color: gold; 
   justify-items: right;
-  margin-left: 10%;
+  
 } 
 .blue3 {
   width: 100%;
@@ -111,14 +113,14 @@
     height: 400px;
 }
 .red4 {
-  width: 300px; 
+  width: 100%; 
   height: 100%; 
   background-color: red; 
   grid-column: 1/2;
   grid-row: 1/4;
 } 
 .green4 {
-  width: 300px; 
+  width: 100%; 
   height: 100%; 
   background-color: green; 
   grid-column: 2/3;
@@ -126,7 +128,7 @@
   justify-items: left;
 } 
 .yellow4 {
-  width: 300px; 
+  width: 100%; 
   height: 100%; 
   background-color: gold; 
   grid-column: 2/3;
@@ -134,7 +136,7 @@
   justify-items: left;
 } 
 .blue4 {
-  width: 300px; 
+  width: 100%; 
   height: 100%; 
   background-color: blue; 
   grid-column: 2/3;
@@ -146,69 +148,70 @@
     height: 400px;
 }
 .red5 { 
-  width: 700px; 
-  height: 100px; 
+  width: 100%; 
+  height: 30%; 
   background-color: red; 
  
 } 
 .green5 { 
-  width: 200px; 
-  height: 200px; 
+  width: 25%; 
+  height: 40%; 
   background-color: green; 
-  
   float: left;
+  
 } 
 .yellow5 {
-  width: 700px; 
-  height: 270px; 
+  width:100%; 
+  height: 50%; 
   background-color: gold; 
   
   
 } 
 .blue5 {
-  width: 700px; 
-  height: 100px; 
+  width:100%; 
+  height:20%; 
   background-color: blue; 
   
 } 
 /* Activity 6 styles */ 
 .content6 {
-    display: grid;
-    grid-template-columns: 100px 100px 100px 100px 100px 100px;
-    
+  display: grid;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px 100px;
 }
 .red6 {
-  width: 400px; 
-  height: 200px; 
-  background-color: red; 
-  grid-column: 1/5;
-  grid-row: 1/3;
-  z-index: 0;
+width: 100%; 
+height: 100%; 
+background-color: red; 
+grid-column: 1/5;
+grid-row: 1/3;
+z-index: 0;
 } 
 .green6 {
-  width: 200px; 
-  height: 200px; 
-  background-color: green; 
-  grid-column: 1/3;
-  grid-row: 5/7;
-  z-index: 2;
+width: 100%; 
+height: 100%; 
+background-color: green; 
+grid-column: 1/3;
+grid-row: 5/7;
+z-index: 2;
 } 
 .yellow6 {
-  width: 200px; 
-  height: 400px; 
-  background-color: gold;
-  grid-column: 5/7;
-  grid-row: 3/7;
-  z-index: 2;
+width: 100%; 
+height: 100%; 
+background-color: gold;
+grid-column: 5/7;
+grid-row: 3/7;
+z-index: 2;
 } 
 .blue6 {
-  width: 400px; 
-  height: 400px; 
-  background-color: blue; 
-  grid-column: 2/6;
-  grid-row: 2/6;
-  z-index: 1;
+width: 100%; 
+height: 100%; 
+background-color: blue; 
+grid-column: 2/6;
+grid-row: 2/6;
+z-index: 1;
 } 
+
 
 
 /* Do not make any changes below here */
