--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -161,11 +161,10 @@
   
 } 
 .yellow5 {
-  width:100%; 
-  height: 50%; 
+  max-width: 1200px; 
+  max-height: 480px; 
   background-color: gold; 
-  
-  
+    
 } 
 .blue5 {
   width:100%; 
