--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -226,6 +226,65 @@ nav {
 }
 
 
+/* page 2 (Rivers) */
+
+#background-page2{
+    height: 800px;
+    background-color: #1f5673;
+    grid-column: 1/11;
+    grid-row: 4/9;
+    margin-top: 150px;
+    
+}
+.mountains-page2{
+    width: 100%;
+    margin: 40px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+    box-sizing: border-box;
+    z-index: 1;
+    float: right;
+}
+.msg-page2 p{
+    color: #1f5673;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: .8em;
+    padding-bottom: 15px;
+    text-align: left;
+    padding-right: 60px;
+
+}
+.mountains-page2 h2{
+    color: #1f5673;
+    font-family: 'Bebas Neue', 'PT Sans', sans-serif;
+}
+.msg-page2{
+    background-color: #90c3c8; 
+    
+    padding: 50px;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+    
+}
+.msg-page2 h2{
+    
+    line-height: 1.5em;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    text-align: left;
+}
+#main-page2{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+#title-page2{
+    line-height: 5em;
+    font-family: 'Bebas Neue', 'PT Sans', sans-serif;
+    text-align: center;
+}
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
