--- a/pictures_company/styles/style.css
+++ b/pictures_company/styles/style.css
@@ -128,3 +128,122 @@ footer{
     justify-content: space-around;
     align-items: center;
 }
+/* Page 2 - events */
+
+#main-events{
+    display: grid;
+    grid-template-columns: 10% 150px 500px 500px 150px 10%;
+    grid-template-rows: 700px 700px 700px 700px 700px;
+}
+.msg-events-1{
+    grid-column: 2/6;
+    grid-row: 1/2;
+    background-color: #8ca03d; 
+    box-shadow: 5px 5px 10px #6f7364;
+    padding: 90px;
+    padding-right: 650px;
+    padding-left: 50px;
+    color: black;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: 2em;
+    text-align: left;
+    margin: 40px;
+    
+}
+
+.wedding{
+    grid-column: 3/6;
+    grid-row: 1/2;
+    box-sizing: border-box;
+    z-index: 1;
+    float: right;
+    width: 90%;
+    margin: 0px;
+    margin-top: 200px;
+    padding-left: 500px;
+}
+
+.msg-events-2{
+    grid-column: 2/6;
+    grid-row: 2/3;
+    background-color: #54c09f; 
+    box-shadow: 5px 5px 10px #6f7364;
+    padding: 90px;
+    padding-left: 660px;
+    padding-right: 50px;
+    color: black;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: 2em;
+    text-align: left;
+    margin: 40px;
+}
+.baptism{
+    grid-column: 3/6;
+    grid-row: 2/3;
+    box-sizing: border-box;
+    z-index: 1;
+    float: left;
+    width: 90%;
+    margin: 0px;
+    margin-top: 200px;
+    padding-right: 500px;
+}
+.msg-events-3{
+    grid-column: 2/6;
+    grid-row: 3/4;
+    background-color: #8ca03d; 
+    box-shadow: 5px 5px 10px #6f7364;
+    padding: 90px;
+    padding-right: 650px;
+    padding-left: 50px;
+    color: black;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: 2em;
+    text-align: left;
+    margin: 40px;
+}
+.birthday{
+    grid-column: 3/6;
+    grid-row: 3/4;
+    box-sizing: border-box;
+    z-index: 1;
+    float: right;
+    width: 90%;
+    margin: 0px;
+    margin-top: 200px;
+    padding-left: 500px;
+}
+.msg-events-4{
+    grid-column: 2/6;
+    grid-row: 4/5;
+    background-color: #54c09f; 
+    box-shadow: 5px 5px 10px #6f7364;
+    padding: 90px;
+    padding-left: 660px;
+    padding-right: 50px;
+    color: black;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: 1.5em;
+    text-align: left;
+    margin: 40px;
+}
+.business{
+    grid-column: 3/6;
+    grid-row: 4/5;
+    box-sizing: border-box;
+    z-index: 1;
+    float: left;
+    width: 90%;
+    margin: 0px;
+    margin-top: 200px;
+    padding-right: 500px;
+}
+.msg-events-5{
+    grid-column: 2/6;
+    grid-row: 5/6;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: 2.5em;
+    text-align: left;
+    color: black;
+    margin: 50px;
+}
