--- a/pictures_company/styles/style.css
+++ b/pictures_company/styles/style.css
@@ -247,5 +247,118 @@ footer{
     color: black;
     margin: 50px;
 }
+/* testimonials */
+#main-testimonials{
+    display: grid;
+    grid-template-columns: 5% 1fr 1fr 1fr 1fr 1fr 1fr 1fr 5%;
+    grid-template-rows: 3% 500px 500px 500px 700px 500px 500px 500px 500px 3%;
+}
+.testimonials-title{
+    grid-column: 2/9;
+    grid-row: 1/2;
+    color: black;
+    font-family: 'Bebas Neue', 'PT Sans', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+    text-align: center;
+}
+.testimonials-img-1{
+    grid-column: 2/5;
+    grid-row: 2/3;
+    box-sizing: border-box;
+    z-index: 1;
+    float: left;
+    width: 75%;
+    margin: 0px;
+    margin-top: 80px;
+    padding-left: 100px;
+}
 
+.msg-testimonials-1{
+    grid-column: 2/9;
+    grid-row: 2/4;
+    background-color:#eee7d0 ; 
+    padding-top: 300px;
+    padding-left: 90px;
+    padding-right: 50px;
+    color: black;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: 2em;
+    text-align: center;
+    margin: 40px;
+}
+.testimonials-img-2{
+    grid-column: 2/5;
+    grid-row: 4/5;
+    box-sizing: border-box;
+    z-index: 1;
+    float: left;
+    width: 75%;
+    margin: 0px;
+    margin-top: 80px;
+    padding-left: 100px;
+}
 
+.msg-testimonials-2{
+    grid-column: 2/9;
+    grid-row: 4/6;
+    background-color: #eee7d0; 
+    padding-top: 400px;
+    padding-left: 90px;
+    padding-right: 50px;
+    color: black;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: 2em;
+    text-align: center;
+    margin: 40px;
+}
+.testimonials-img-3{
+    grid-column: 2/5;
+    grid-row: 6/7;
+    box-sizing: border-box;
+    z-index: 1;
+    float: left;
+    width: 65%;
+    margin: 0px;
+    margin-top: 80px;
+    padding-left: 100px;
+}
+
+.msg-testimonials-3{
+    grid-column: 2/9;
+    grid-row: 6/8;
+    background-color: #eee7d0; 
+    padding-top: 400px;
+    padding-left: 90px;
+    padding-right: 50px;
+    color: black;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: 2em;
+    text-align: center;
+    margin: 40px;
+}
+.testimonials-img-4{
+    grid-column: 2/5;
+    grid-row: 8/9;
+    box-sizing: border-box;
+    z-index: 1;
+    float: left;
+    width: 75%;
+    margin: 0px;
+    margin-top: 80px;
+    padding-left: 100px;
+}
+
+.msg-testimonials-4{
+    grid-column: 2/9;
+    grid-row: 8/10;
+    background-color: #eee7d0; 
+    padding-top: 300px;
+    padding-left: 90px;
+    padding-right: 50px;
+    color: black;
+    font-family: 'BIZ UDPGothic', sans-serif, 'Dosis';
+    font-size: 2em;
+    text-align: center;
+    margin: 40px;
+}
